preliminary HiveMQ implementation of MQTT server and client